Comment conflicting function declarations

--- a/src/binding/cxx/mpicxx.h.in
+++ b/src/binding/cxx/mpicxx.h.in
@@ -2733,9 +2733,9 @@ extern const char ** const ARGV_NULL;
 extern const char *** const ARGVS_NULL;
 extern void * const BOTTOM;
 extern void * const IN_PLACE;
-extern void Init(void);
+//extern void Init(void);
 extern void Init(int &, char **& );
-extern int Init_thread(int);
+//extern int Init_thread(int);
 extern int Init_thread(int &, char **&, int );
 extern double Wtime(void);
 extern double Wtick(void);
